--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "jquery": "^3.1.0",
-    "golden-layout": "^1.5.1"
+    "golden-layout": "^1.5.1",
+    "angular": "^1.5.8"
   }
 }
